Fix: Added proper spacing should contents becomes longer

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,7 +19,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 120px);
+  padding: 60px 0;
 
   @media (max-width: 992px) {
     padding: 40px 0;
